fix(agronomic): harden plot operations and project configuration.